--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,3 +3,8 @@
   box-shadow: 0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgb(0, 0, 0);
   color:white !important;
 }
+
+li{
+ display: inline;
+ padding: 1.5em;
+}
